--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,18 @@ a {
   font-family: Verdana, sans-serif;
 }
 
+h3 {
+  font-size: 40px; 
+  font-weight: bold;
+  font-family: Verdana, sans-serif;
+  padding-left: 5%;
+}
+
+p {
+  padding-left: 5%; 
+  font-family: Verdana, sans-serif;
+}
+
 .jumbotron {
   background: 
   linear-gradient(
@@ -29,15 +41,20 @@ a {
   }
 
 .jumbotron2 {
-  background: 
-  linear-gradient(
-    rgba(0, 0, 250, 0.25), 
-    rgba(125, 250, 250, 0.45)
-  );
+  background: url("../images/galaxy.jpg");
   position: relative;
+  font-family: 'Verdana', sans-serif;
+  font-weight: bold;
+  font-size: 10px;
   background-repeat: no-repeat;
   background-size: cover;
 } 
+
+.tableauPlaceholder {
+  padding-left: .5%;
+  position: relative;
+
+}
 
 
 .button {
