--- a/templates/index.html
+++ b/templates/index.html
@@ -52,55 +52,66 @@
 
         <!--Intro to graphs-->
         <div class="jumbotron2">
-            <div class='col-md-12'>
                 <br>
-                <a>Visualizations of Dataset:</a>
-                <!--FILLER TEXT!!! NEED DESCRIPTIONS-->
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div>
+                <a>Visualizations of Dataset</a>  
         </div>
         <br><br>
         
-        <!--DESCRIPTION OF Religion GRAPH-->
-        <h3 style='padding:10px'>Scores Based on Religion:</h3> 
-                <div class='col-md-6'>
-                    <p>
-                        This chart shows the average scores of each conspiracy theory for each type of religion. The size of the bubbles indicate how many of the respondents identified with that particular religion. The scale was based on the average scores for each conspiracy theory as well as the overall scores.
-                    </p>
-                </div>
+        <!--begin row-->
+        <div class="row">
+                <!--Conspiracy by religion graph-->
+                <div class='tableauPlaceholder' id='viz1636659283096'>
+                    <noscript>
+                        <a href='#'>
+                            <iframe alt='Conspiracy Theories ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;Story1&#47;1_rss.png' style='border: none'></iframe>
+                        </a>
+                    </noscript>
+                    <object class='tableauViz'  style='display:none;'>
+                        <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
+                        <param name='embed_code_version' value='3' /> <param name='site_root' value='' />
+                        <param name='name' value='Conspiracy_Theory&#47;Story1' /><param name='tabs' value='no' />
+                        <param name='toolbar' value='yes' />
+                        <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;Story1&#47;1.png' /> 
+                        <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' />
+                        <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
+                        <param name='display_count' value='yes' /><param name='language' value='en-US' />
+                    </object>
+                </div>                
+                <script type='text/javascript'>                    
+                    var divElement = document.getElementById('viz1636659283096');                    
+                    var vizElement = divElement.getElementsByTagName('object')[0];                    
+                    vizElement.style.width='1016px';vizElement.style.height='991px';                    
+                    var scriptElement = document.createElement('script');                    
+                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
+                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+                </script>
+
                 <br>
 
-                <!--Conspiracy by religion graph-->
-                <div class='row'>
-                    <div class='col-md-6' id='viz1636482475483' style='position: relative'>
-                        <noscript>
-                            <a href='#'>
-                            <img alt='Religion Dashboard ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;ReligionDashboard&#47;1_rss.png' style='border: none' />
-                            </a>
-                        </noscript>
-                        <object class='tableauViz'  style='display:none;'>
-                            <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> 
-                            <param name='embed_code_version' value='3' /> 
-                            <param name='site_root' value='' />
-                            <param name='name' value='Conspiracy_Theory&#47;ReligionDashboard' />
-                            <param name='tabs' value='no' /><param name='toolbar' value='yes' />
-                            <param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Co&#47;Conspiracy_Theory&#47;ReligionDashboard&#47;1.png' /> <param name='animate_transition' value='yes' />
-                            <param name='display_static_image' value='yes' />
-                            <param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' />
-                            <param name='display_count' value='yes' /><param name='language' value='en-US' />
-                        </object>
-                    </div>                
-                        <script type='text/javascript'>                    
-                            var divElement = document.getElementById('viz1636482475483');                    
-                            var vizElement = divElement.getElementsByTagName('object')[0];                    
-                                if ( divElement.offsetWidth > 800 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-                                else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='100%';vizElement.style.height=(divElement.offsetWidth*0.75)+'px';} 
-                                else { vizElement.style.width='100%';vizElement.style.height='1777px';}                     
-                            var scriptElement = document.createElement('script');                    
-                            scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    
-                            vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-                        </script>
+                <!--Description of graph elements-->
+                <div class="col-sm-5" >
+                    <h3>Scores Based on Religion and Scores Based on Gender:</h3> 
+                            <br>
+                            <p>
+                                The first chart below shows the average scores of each conspiracy theory for each type of religion. 
+                                The size of the bubbles indicate how many of the respondents identified with that particular religion. 
+                                The scale was based on the average scores for each conspiracy theory as well as the overall scores.
+                            </p>
+                            <p>
+                                In the second chart below, the averages based on gender identification can be observed. 
+                                Overall, women and other have a higher overall rating as conspiracy theorists in comparison to men. 
+                            </p>
+                </div>
             </div>
+            <br><br><br>
+
+    <!--Link to our github-->
+    <p style='padding-left:1px'>Brought to you by Team Lizard People</p>
+            <img src="../static/images/team_lp.gif" style="height:220px ; width:368px" />
+            <br><br>
+    <a style='font-size:20px' href="https://github.com/karengut97/Conspiracy_Theory_Final">Click here to view our code on GitHub!</a>
+    <br><br>
+
 
     <!-- Link to JS file, d3, and plotly-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
