--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -18,14 +18,13 @@
             <h2> How much of a Conspiracy Theorist are you? </h2>
             <h2>Test Your Luck With Our Prediction Model</h2>
             <br></br>
-            <h6 id="instructions">Select your features then "CLICK TO Calculate"</h6>
+            <h6 id="instructions">Select your features then "CLICK to Calculate"</h6>
             <br>
     </div>
 
         <!-- start of selection & prediction form -->
 
         <div>
-            <!-- <form id="selectionForm" action='/predict' class="bg-dark" method="post"> -->
             <div class="row">
 
                     <!--list for Age-->
@@ -35,7 +34,7 @@
                             <label for="age">Your Age:</label>
                             <br>
                             <select id="age" name="age">
-                                <option selected value="19">Please Make A Selection:</option>
+                                <option selected value="13">Please Make A Selection:</option>
                                 <option value="13">13</option>
                                 <option value="14">14</option>
                                 <option value="15">15</option>
@@ -116,7 +115,7 @@
                             <label for="religion">Your Religion:</label>
                             <br>
                             <select name="religion" id="religion">
-                                <option selected value="12">Please Make A Selection:</option>
+                                <option selected value="1">Please Make A Selection:</option>
                                 <option value="1">Agnostic</option>
                                 <option value="2">Atheist</option>
                                 <option value="3">Buddhist</option>
@@ -141,7 +140,7 @@
                             <label for="family_size">Sibling Amount (Including Yourself):</label>
                             <br>
                             <select name="fam_size" id="fam_size">
-                                <option value="4">Please Make A Selection:</option>
+                                <option value="1">Please Make A Selection:</option>
                                 <option value="1">One</option>
                                 <option value="2">Two</option>
                                 <option value="3">Three</option>
@@ -206,7 +205,7 @@
                             <label for="education">Your Education Level:</label>
                             <br>
                             <select name="education" id="education">
-                                <option selected value="2">Please Make A Selection:</option>
+                                <option selected value="1">Please Make A Selection:</option>
                                 <option value="1">Less than high school</option>
                                 <option value="2">High School</option>
                                 <option value="3">University Degree</option>
@@ -272,7 +271,7 @@
                             <label for="race">Your Race:</label>
                             <br>
                             <select name="race" id="race">
-                                <option selected value="4">Please Make A Selection:</option>
+                                <option selected value="1">Please Make A Selection:</option>
                                 <option value="1">Asian</option>
                                 <option value="2">Arab</option>
                                 <option value="3">Black</option>
@@ -290,7 +289,7 @@
                             <label for="voted">Have You Voted?</label>
                             <br>
                             <select name="voted" id="voted">
-                                <option selected value="2">Please Make A Selection:</option>
+                                <option selected value="1">Please Make A Selection:</option>
                                 <option value="1">Yes</option>
                                 <option value="2">No</option>
                             </select>
@@ -320,13 +319,15 @@
                     <br></br>
 
                     <div class="col-md-12">
-                        <button onclick="make_pred()" class='btn btn-info'>CLICK TO Calculate</button>
+                        <button onclick="make_pred()" class='btn btn-info'>CLICK to Calculate</button>
+                        <button onClick="window.location.reload();" class='btn btn-info'>Refresh Selections</button>
                         <br></br>
                         <div class="col-md-12">
                             <h1 id="prediction"></h1>
                             <img id="dummy" src="../static/images/liar_liar.gif">
                         </div>
                     </div>
+                    
             </div>
         <br><br>
         </div>
@@ -336,7 +337,7 @@
             <div class='col-md-12'>
                 <br>
                 <h1>Description of Results:</h1>
-                    <li>Government Malfeasance: You might believe in the malicious intent of the government! Pay your taxes (or don't)...</li>
+                    <li>Government Malfeasance: You might believe in the malicious intent of the government.</li>
                     <br>
                     <li>Malevolent Global Conspiracies: You might believe that world as we observe it is a hoax.</li>
                     <br>
@@ -344,11 +345,11 @@
                     <br>
                     <li>Control of Information: You might believe that the media is biased and untruthful.</li>
                     <br>
-                    <li>Personal Wellbeing: You might believe that organizations are actively seeking to control your mind and spread diseases.</li>
+                    <li>Personal Well-being: You might believe that organizations are actively seeking to control your mind and spread diseases.</li>
                     <br>
                     <li>You got a combination of the above: You believe in more than one. Congrats?? </li>
                     <br>
-                    <li>Not: You are a skeptic to conspiracies. At least for now... </li>
+                    <li>Not a Conspiracy Theorist: You are a skeptic to conspiracies. At least for now... </li>
                     <br>
             </div>
         </div>
